--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   flutter_native_splash: ^2.4.3
   go_router: ^14.6.2
   flutter_launcher_icons: ^0.14.2
+  dio: ^5.7.0
+  pdf: ^3.11.1
+  path_provider: ^2.1.5
+  printing: ^5.13.4
 
 dev_dependencies:
   flutter_test:
