--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   pdf: ^3.11.1
   path_provider: ^2.1.5
   printing: ^5.13.4
+  dropdown_textfield: ^1.2.0
 
 dev_dependencies:
   flutter_test:
