--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path_provider: ^2.1.5
   printing: ^5.13.4
   dropdown_textfield: ^1.2.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
